libroot: Do not include terminating NULL byte in result of [wc]strxfrm.

Fixes #18347.